<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            //#if fixedDate || dateRange
            android:text="@string/reminder_list_late"
            //#else
            android:text="MONDAY"
            //#endif
            android:textColor="#cc0000"
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="10dp"
            android:background="#cc0000" />

        <ListView
            //#if fixedDate || dateRange
            android:id="@+id/lvRemindersLate"
            //#else
            android:id="@+id/lvMonday"
            //#endif
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            //#if fixedDate || dateRange
            android:text="@string/reminder_list_today"
            android:textColor="#0099ff"
            //#else
            android:text="TUESDAY"
            android:textColor="#cc0000"
            //#endif
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            //#if fixedDate || dateRange
            android:background="#0099ff"
            //#else
            android:background="#cc0000"
            //#endif
            android:layout_marginLeft="10dp" />

        <ListView
            //#if fixedDate || dateRange
            android:id="@+id/lvRemindersToday"
            //#else
            android:id="@+id/lvTuesday"
            //#endif
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            //#if fixedDate || dateRange
            android:text="@string/reminder_list_nextdays"
            android:textColor="#bababa"
            //#else
            android:text="WEDNESDAY"
            android:textColor="#cc0000"
            //#endif
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            //#if fixedDate || dateRange
            android:background="#bababa"
            //#else
            android:background="#cc0000"
            //#endif
            android:layout_marginLeft="10dp" />

        <ListView
            //#if fixedDate || dateRange
            android:id="@+id/lvRemindersNextDays"
            //#else
            android:id="@+id/lvWednesday"
            //#endif
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />

        //#if fixedDate || dateRepeat
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            //#ifdef fixedDate
            android:text="@string/reminder_list_nodate"
            android:textColor="#000"
            //#else
            android:text="THURSDAY"
            android:textColor="#cc0000"
            //#endif
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            //#if fixedDate || dateRange
            android:background="#000"
            //#else
            android:background="#cc0000"
            //#endif
            android:layout_marginLeft="10dp" />

        <ListView
            //#ifdef fixedDate
            android:id="@+id/lvRemindersNoDate"
            //#else
            android:id="@+id/lvThursday"
            //#endif
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />
        //#endif

        //#ifdef dateRepeat
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:text="FRIDAY"
            android:textColor="#cc0000"
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="10dp"
            android:background="#cc0000" />

        <ListView
            android:id="@+id/lvFriday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:text="SATURDAY"
            android:textColor="#cc0000"
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="10dp"
            android:background="#cc0000" />

        <ListView
            android:id="@+id/lvSaturday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:text="SUNDAY"
            android:textColor="#cc0000"
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="10dp"
            android:background="#cc0000" />

        <ListView
            android:id="@+id/lvSunday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />
      //#endif
    </LinearLayout>
</ScrollView>
